#189 - Fix navbar z-index for input-group

--- a/src/Recollections.Blazor.UI/wwwroot/css/site.scss
+++ b/src/Recollections.Blazor.UI/wwwroot/css/site.scss
@@ -151,8 +151,6 @@ a.bg-salmon {
 @import "_file-upload.scss";
 
 .main-navbar {
-    z-index: 2;
-
     &.block-icons {
         padding-top: .25rem;
         padding-bottom: .25rem;
